# open-deskbot-service

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  start.sh
deskbot-server/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  start.sh
deskbot-server/data/: camera_face.json  face_expr_scenes.json  face_live_snapshot.json  face_mouth_by_phoneme.json  face_profiles.json  pb_face_bundle_demo.json  pb_face_bundle_demo_overlay.yaml  pb_scenes_idle_sleep_guard.json  scene_playbooks.json  servo.json
deskbot-server/docs/: ARCHITECTURE.md
deskbot-server/prompts/: llm_system.txt
deskbot-server/scripts/: check_asr_model.py  download_model.py
deskbot-server/src/deskbot_server/: __init__.py  __main__.py  asr_model_dir.py  auto_reply.py  camera_face_config_store.py  camera_face_tune.py  config.py  constants.py  debug_prefs_store.py  env.py  face_expr_scenes_store.py  face_identity.py  face_mouth_config_store.py  face_profiles_store.py  face_snapshot_cache.py  logging_setup.py  main.py  memory_store.py  paths.py  scene_playbook_runner.py  scene_playbooks_store.py  servo_config_store.py  settings.py  util.py
deskbot-server/src/deskbot_server/application/: __init__.py  camera_broker.py  camera_frame.py  camera_servo_follower.py  chat_flow.py  chat_service.py  face_detector.py  face_registration.py  face_tracker.py  llm_tool_runner.py
deskbot-server/src/deskbot_server/core/: __init__.py  settings.py  types.py
deskbot-server/src/deskbot_server/infrastructure/: __init__.py  bootstrap.py
deskbot-server/src/deskbot_server/llm/: __init__.py  face_scene.py  utils.py
deskbot-server/src/deskbot_server/pb/: __init__.py  anim_defaults.py  bundle.py  face_bundle.py  face_bundle_json_fmt.py  llm_plan.py  phoneme_anim.py  scenes.py  servo_pcm.py  shapes.py  wire.py
deskbot-server/src/deskbot_server/pipeline/: __init__.py  audio.py  flow.py  pipeline.py
deskbot-server/src/deskbot_server/tts/: __init__.py  phoneme.py
deskbot-server/src/deskbot_server/vision/: __init__.py  face_embedding.py  geometry.py  undistort.py
deskbot-server/src/deskbot_server/web/: __main__.py  app.py
deskbot-server/src/deskbot_server/ws/: __init__.py  asr_chat.py  asr_chat_hub.py  camera.py  device_pipeline.py  http_api.py  pb_idle_registry.py  registry.py  router.py  stages.py  ws_send.py
deskbot-server/tests/: __init__.py  test_core.py  test_llm_plan.py  test_pb_and_camera.py
deskbot-server/tools/: README.md  camera_test_client.py  live_mic_client.py  test_client.py
docs/: README.md  (+2 more)
paddlespeech-server/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server_extended.py  start-local.sh  start.sh
paddlespeech-server/conf/: tts_online_application.yaml
paddlespeech-server/docs/: PROTOCOL.md
paddlespeech-server/src/paddlespeech_server/: __init__.py  __main__.py  main.py  phoneme.py  ws_phoneme.py
paddlespeech-server/tests/: test_phoneme_split.py
paddlespeech-server/tools/: README.md  test_phoneme_client.py
(+20 files in other folders)
