[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deskbot-server"
version = "0.1.0"
description = "OpenDesk voice robot backend (ASR + LLM + TTS + ESP32 pb protocol)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "funasr==1.2.7",
    "openai==2.8.1",
    "websockets==14.2",
    "PyYAML==6.0.2",
    "numpy==1.26.4",
    "opuslib_next==1.1.5",
    "webrtcvad==2.0.10",
    "setuptools<81",
    "Flask==3.1.3",
    "mediapipe==0.10.33",
    "Pillow>=12.2.0",
    "opencv-contrib-python>=4.10,<4.11",
    "insightface>=0.7.3",
    "onnxruntime>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "sounddevice==0.5.3",
    "ruff>=0.9",
    "pytest>=8.0",
]

[project.scripts]
deskbot-server = "deskbot_server.__main__:cli"
deskbot-server-web = "deskbot_server.web.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]
