[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paddlespeech-server"
description = "PaddleSpeech streaming TTS sidecar with phoneme-aligned WebSocket"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "paddlepaddle==3.3.1",
    "paddlespeech==1.5.0",
    "aistudio-sdk==0.2.6",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
]

[project.scripts]
paddlespeech-server = "paddlespeech_server.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "paddlespeech_server.__version__"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]
